--- a/app-server/vercel.json
+++ b/app-server/vercel.json
@@ -1,16 +1,16 @@
 {
-    "version": 2,
-    "builds": [
-        {
-            "src": "vercel-server.js",
-            "use": "@vercel/node"
-        }
-    ],
-    "routes": [
-        {
-            "src": "/(.*)",
-            "dest": "/vercel-server.js",
-            "methods": ["GET", "POST", "PATCH", "DELETE", "OPTIONS"]
-        }
-    ]
+  "version": 2,
+  "builds": [
+    {
+      "src": "./index.js",
+      "use": "@vercel/node"
+    }
+  ],
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "/",
+      "methods": ["GET", "POST", "PATCH", "DELETE", "OPTIONS"]
+    }
+  ]
 }
