update index.js for vercel

--- a/app-server/package.json
+++ b/app-server/package.json
@@ -30,7 +30,7 @@
     "node": ">=10.0.0"
   },
   "scripts": {
-    "start": "node index.js",
+    "start": "node ./index.js",
     "start1": "egg-scripts start --daemon --title=egg-server-app-server",
     "stop1": "egg-scripts stop --title=egg-server-app-server",
     "dev": "egg-bin dev",
